# zlatoforge-bitrix-giis

./: .gitattributes  .gitignore  Makefile  README.md  compose.yml  docker-compose.yaml
app/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml
app/assets/: install.sh  stunnel.conf  supervisord.conf
app/assets/scripts/: root.sh  unsign.sh  verify.sh
app/assets/scripts/lib/: root.exp  rootca.exp
app/src/: bitrix.py
app/src/_examples/: example_smev.py  try0.py  try3.py  try4.py  try5.py  try6.py  try7.py  try8.py  try9.py
app/src/api/: clients.py  examples.py  health.py  queries.py  receipt.py  routing.py
app/src/api/examples/: example1.py  example2.py  example3.py  routing.py
app/src/bitrix/: __init__.py  main.py
app/src/common/: routing.py
app/src/core/: settings.py
app/src/dmdk_handler/: __init__.py  cypher.py  handler.py  namespaces.py  xml_message.py
app/src/schemas/: bitrix.py  queries.py
app/src/schemas/bitrix/: __init__.py  contact.py  deal.py  dmdk_smart_process.py  dmdkul.py
app/src/services/: check_bitrix_contact.py  create_scrap_receipt.py  jewelry_manufacturing.py  jewelry_production.py  notificator.py  on_startup.py  scrap_receipt.py  service_validator.py
app/src/test/: routing.py  try4.py  try5.py  try7.py  try9.py
app/src/utils/: logger.py
app/src/xml_handler/base/: __init__.py  namespaces.py  node.py  signed_template.py  template.py
app/src/xml_handlers/: __init__.py  get_glossary.py
app/src/xml_handlers/base/: __init__.py  namespaces.py  node.py  template.py
app/tests/: playground.py
bitrix/: Dockerfile  (+2 more)
(+28 files in other folders)
