[project]
name = "cypher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fast-bitrix24>=1.8.11",
    "fastapi==0.115.11",
    "loguru>=0.7.3",
    "lxml>=6.0.1",
    "pydantic-settings>=2.11.0",
    "uvicorn>=0.35.0",
    "zeep[async]>=4.3.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]

[tool.ruff]
include = ["main.py", "src/**/*.py", "pyproject.toml"]
extend-exclude = ["src/_examples", "src/dmdk_handler/gost_xml_transform"]
line-length = 100
preview = true
lint.select = ["E", "F", "W", "UP", "I", "TID25", "D101", "D102", "D103", "D107", "T201"]
lint.ignore = ["D107"]
lint.extend-select = ["E302", "E305", "E306"]
lint.extend-fixable = ["E302", "E305", "E306"]

[tool.ruff.lint.isort]
detect-same-package = false
lines-after-imports = 2
split-on-trailing-comma=false

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # ignore unused imports in __init__.py

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = true
line-ending = "cr-lf"
